# plmidi

./: Cargo.toml  Cross.toml  readme.md
.cargo/: config  config.toml
.github/chglog/: release.yml
.github/workflows/: main.yml
src/: app.rs  fluid.rs  main.rs  playback.rs  timer.rs  track.rs
