[package]
name = "plmidi"
description = "Play MIDI files from the command line."
version = "0.11.9"
edition = "2021"
authors = [ "Taylan Gökkaya <insomnimus@protonmail.com>" ]
license = "MIT"
repository = "https://github.com/insomnimus/plmidi"
categories = ["command-line-utilities", "multimedia::audio", "multimedia::encoding"]
keywords = ["midi", "music", "smf"]
readme = "readme.md"

[features]
default = []
jack = ["nodi/midir-jack"]
winrt = ["nodi/midir-winrt"]
fluid = ["fluidlite/pkg-config", "cpal", "parking_lot"]
fluid-bundled = ["fluidlite/builtin", "cpal", "parking_lot"]

[dependencies]
clap = { version = "3.1.18", features = ["cargo", "unicode", "wrap_help"] }
crossterm = "0.23.2"
log = "0.4.17"
midir = "0.8.0"
nodi = { version = "0.16.0", features = ["hybrid-sleep", "midir"] }
simple_logger = { version = "2.1.0", default-features = false, features = ["stderr", "colored"] }

# optional dependencies
cpal = { version = "0.13.5", optional = true }
fluidlite = { version = "0.2.1", optional = true, features = ["static"] }
parking_lot = { version = "0.12.1", optional = true }
