[package]
name = "plmidi"
description = "Play MIDI files from the command line."
version = "0.14.1"
edition = "2021"
authors = [ "Taylan Gökkaya <insomnimus@protonmail.com>" ]
license = "MIT"
repository = "https://github.com/insomnimus/plmidi"
categories = ["command-line-utilities", "multimedia::audio", "multimedia::encoding"]
keywords = ["midi", "music", "smf"]
readme = "readme.md"

[features]
default = ["fluid-bundled"]
system = ["nodi/midir"]
system-jack = ["system", "nodi/midir-jack"]
system-winrt = ["system", "nodi/midir-winrt"]
fluid = ["fluidlite/pkg-config", "cpal", "parking_lot", "clap/env"]
fluid-bundled = ["fluidlite/builtin", "cpal", "parking_lot", "clap/env"]

[dependencies]
# Optional dependencies
cpal = { version = "0.13.5", optional = true }
fluidlite = { version = "0.2.1", optional = true, features = ["static"] }
parking_lot = { version = "0.12.1", optional = true }

# Required dependencies
clap = { version = "=3.1.18", features = ["cargo", "unicode", "wrap_help"] }
crossterm = { version = "0.23.2", features = ["event-stream"] }
futures = { version = "0.3.21", features = ["executor"] }
log = "0.4.17"
nodi = { version = "0.19.2", features = ["hybrid-sleep"] }
simple_logger = { version = "2.1.0", default-features = false, features = ["stderr", "colored"] }
rand = "0.8.5"
wild = "2.0.4"
cfg-if = "1.0.0"
